fix illegible text in commento widget

--- a/src/theme/css/global.css
+++ b/src/theme/css/global.css
@@ -108,7 +108,7 @@ blockquote,
 }
 
 .commento-login-text {
-  color: #423c45 !important;
+  color: #8f8592 !important;
 }
 
 .commento-logo,
